Added case when player wins

--- a/style.sass
+++ b/style.sass
@@ -34,6 +34,9 @@ html, body
   font-size: 16px
   background:
     color: $purple
+    
+  h1
+    margin-top: 10px
   
   h2
     font-size: 1.3em
@@ -75,7 +78,7 @@ div.column
         
 div.info 
   width: 70%
-  margin: 15vmin auto 0
+  margin: 13vmin auto 0
   box-sizing: border-box
   padding: 20px 30px
   background-color: $light
@@ -122,6 +125,11 @@ div.stats
     width: 100%
     background: linear-gradient(to right, #BEEE62 50%, transparent 50%)
     border-radius: 0 0 3px 3px
+    
+  span#winner 
+    display: block
+    padding: 10px 0 0
+    text-align: center
       
   button#cleargame
     display: block
