--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ html, body {
   font-family: "Lato", Calibri, sans-serif;
   font-size: 16px;
   background-color: #3A3042; }
+  html h1, body h1 {
+    margin-top: 10px; }
   html h2, body h2 {
     font-size: 1.3em; }
   html h3, body h3 {
@@ -43,7 +45,7 @@ div.column {
     height: auto; } }
 div.info, div.stats {
   width: 70%;
-  margin: 15vmin auto 0;
+  margin: 13vmin auto 0;
   box-sizing: border-box;
   padding: 20px 30px;
   background-color: #F1F1FF;
@@ -104,6 +106,10 @@ div.stats {
     width: 100%;
     background: linear-gradient(to right, #BEEE62 50%, transparent 50%);
     border-radius: 0 0 3px 3px; }
+  div.stats span#winner {
+    display: block;
+    padding: 10px 0 0;
+    text-align: center; }
   div.stats button#cleargame {
     display: block;
     border: 0;
