--- a/style.css
+++ b/style.css
@@ -176,4 +176,10 @@ div#board {
     div#board .player2pieces .piece.selected {
       box-shadow: 0 0 10px 5px #16A8C7; }
 
+.selection {
+  display: flex;
+}
+.selection div {
+  width: 33%;
+}
 /*# sourceMappingURL=style.css.map */
